# sysaccess

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bindings/python/: sysaccess.py
include/: sysaccess_cpu.h  sysaccess_disk.h  sysaccess_net.h  sysaccess_ram.h  sysaccess_snapshot.h  sysaccess_snapshot_json.h  sysaccess_system.h  sysaccess_user.h
src/: cpu.c  disk.c  net.c  ram.c  snapshot.c  snapshot_json.c  system.c  user.c
tests/: test.c
tests_python/: test.py
